--- a/portfolio/src/assets/projects.json
+++ b/portfolio/src/assets/projects.json
@@ -3,7 +3,7 @@
         "title": "Parks_n_Req",
         "description": "This app provides dynamically generated information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected site.",
         "repoLink": "https://github.com/LiliCecilia23/Parks_n_Req",
-        "deployedLink": "salty-hamlet-73070.herokuapp.com/",
+        "deployedLink": "https://salty-hamlet-73070.herokuapp.com/",
         "imageURL": "https://res.cloudinary.com/dsiaveqw7/image/upload/v1607547117/portfolio/parks_mrdax7.png"
     },
     {
